# murmur

./: .gitignore  MURMUR_V1_PLAN.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: main-release.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  Info.plist  entitlements.macos.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: audio.rs  commands.rs  db.rs  main.rs  models.rs  settings.rs  state.rs  whisper.rs
src/lib/: api.ts  types.ts
