[package]
name = "murmur"
version = "0.1.0"
description = "Local menu bar speech-to-text"
authors = ["alazar"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
cpal = "0.15"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
thiserror = "1"
whisper-rs = { version = "0.12", features = ["metal"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
